# protobuf-messaging

./: .gitmodules  CMakeLists.txt  LICENSE
include/pb_messaging/adapters/: adapter.h  kafka.h  pipe.h  socket.h
include/pb_messaging/interface/: daemon.h
include/pb_messaging/kafka/: handler.h
include/pb_messaging/socket/: msg_client.h  msg_server.h  sock_buffer.h
include/pb_messaging/subscriber/: subscriber.h
include/pb_messaging/util/: perf_monitor.h
script/: test-kafka.py
src/: CMakeLists.txt
src/kafka/: handler.cpp
src/socket/: sock_buffer.cpp
test/: CMakeLists.txt  events.proto  proto_print.cpp  proto_print.h  test.cpp  test_adapters.cpp  test_adapters.h  test_base.h  test_kafka_adapter.cpp  test_pipe.h  test_pipe_adapter.cpp  test_socket.h  test_socket_adapter.cpp
